--- a/projects/anuario-movilidad.html
+++ b/projects/anuario-movilidad.html
@@ -134,8 +134,11 @@
             </div>
 
             <div class="rounded-2xl overflow-hidden border border-slate-700 shadow-2xl bg-slate-900">
-                <img src="../assets/img/Anuarios_movilidad.png" alt="Road casualty yearbook visualization"
-                    class="w-full h-full object-cover max-h-[32rem]">
+                <a href="https://observatorio.movilidadbogota.gov.co/publicaciones/anuarios" target="_blank"
+                    rel="noreferrer" class="block hover:opacity-95 transition">
+                    <img src="../assets/img/Anuarios_movilidad.png" alt="Road casualty yearbook visualization"
+                        class="w-full h-full object-cover max-h-[32rem]">
+                </a>
             </div>
         </div>
 
@@ -169,8 +172,12 @@
 
                 <section id="publications" class="space-y-3">
                     <h3 class="text-xl font-semibold text-white">Official publications</h3>
-                    <p class="text-slate-300">Road Casualty Yearbooks | Bogotá Mobility Observatory (OMB). Add the official
-                        link here to showcase the published yearbooks.</p>
+                    <p class="text-slate-300">
+                        <a href="https://observatorio.movilidadbogota.gov.co/publicaciones/anuarios" target="_blank"
+                            rel="noreferrer" class="text-brand-300 hover:text-brand-200 underline decoration-dotted">
+                            Road Casualty Yearbooks | Bogotá Mobility Observatory (OMB)
+                        </a>
+                    </p>
                 </section>
             </article>
 
@@ -205,8 +212,12 @@
 
                 <section id="publications-es" class="space-y-3">
                     <h3 class="text-xl font-semibold text-white">Publicaciones oficiales</h3>
-                    <p class="text-slate-300">Anuarios de Siniestralidad Vial | Observatorio de Movilidad de Bogotá (OMB).
-                        Agrega aquí el enlace oficial para mostrar los anuarios publicados.</p>
+                    <p class="text-slate-300">
+                        <a href="https://observatorio.movilidadbogota.gov.co/publicaciones/anuarios" target="_blank"
+                            rel="noreferrer" class="text-brand-300 hover:text-brand-200 underline decoration-dotted">
+                            Anuarios de Siniestralidad Vial | Observatorio de Movilidad de Bogotá (OMB)
+                        </a>
+                    </p>
                 </section>
             </article>
         </div>
