--- a/projects/cluster-carac.html
+++ b/projects/cluster-carac.html
@@ -138,8 +138,11 @@
             </div>
 
             <div class="rounded-2xl overflow-hidden border border-slate-700 shadow-2xl bg-slate-900">
-                <img src="../assets/img/ClusterCarac_IA001.png" alt="ClusterCarac visualization"
-                    class="w-full h-full object-cover max-h-[32rem]">
+                <a href="https://github.com/pcdelcampon/ClusterCarac" target="_blank" rel="noreferrer"
+                    class="block hover:opacity-95 transition">
+                    <img src="../assets/img/ClusterCarac_IA001.png" alt="ClusterCarac visualization"
+                        class="w-full h-full object-cover max-h-[32rem]">
+                </a>
             </div>
         </div>
 
