--- a/index.html
+++ b/index.html
@@ -245,42 +245,7 @@
                 <div class="overflow-x-auto pb-4 -mx-4 px-4 lg:mx-0 lg:px-0">
                     <div class="flex gap-6 min-w-full">
 
-                          <!-- Project Card 1 -->
-                          <div
-                              class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden
-                          hover:-translate-y-2 transition duration-300 flex-shrink-0">
-                              <a href="projects/cluster-carac.html"
-                                  class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden block">
-                                  <img src="assets/img/ClusterCarac_IA001.png" alt="ClusterCarac preview"
-                                      class="w-full h-full object-cover">
-                              </a>
-                              <div class="p-5 space-y-3">
-                                  <div class="flex items-start justify-between gap-2">
-                                      <h3 class="text-lg font-bold text-white" data-i18n="proj_cluster_title">
-                          ClusterCarac: Clusters &amp; Classifications</h3>
-                                  </div>
-                                  <p class="text-slate-300 text-sm" data-i18n="proj_cluster_desc">
-                                      R package that surfaces what defines each cluster or category; retro-inspired
-                          characterization preview.
-                                  </p>
-                                  <div class="flex flex-wrap gap-2 text-xs font-mono text-brand-200">
-                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Social studies</span>
-                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Market research</span>
-                                      <span class="bg-brand-900/50 px-2 py-1 rounded">R</span>
-                                      <span class="bg-brand-900/50 px-2 py-1 rounded">FactoClass</span>
-                                      <span class="bg-brand-900/50 px-2 py-1 rounded">EDA</span>
-                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Characterization</span>
-                                  </div>
-                                  <div class="flex gap-3">
-                                      <a href="projects/cluster-carac.html"
-                                          class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs
-                          hover:bg-gray-200 transition">View
-                                          Project</a>
-                                  </div>
-                              </div>
-                          </div>
-
-                          <!-- Project Card 2 -->
+                          <!-- Project Card 1: Anuario -->
                           <div
                               class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden
                           hover:-translate-y-2 transition duration-300 flex-shrink-0">
@@ -308,6 +273,41 @@
                                   </div>
                                   <div class="flex gap-3">
                                       <a href="projects/anuario-movilidad.html"
+                                          class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs
+                          hover:bg-gray-200 transition">View
+                                          Project</a>
+                                  </div>
+                              </div>
+                          </div>
+
+                          <!-- Project Card 2: ClusterCarac -->
+                          <div
+                              class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden
+                          hover:-translate-y-2 transition duration-300 flex-shrink-0">
+                              <a href="projects/cluster-carac.html"
+                                  class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden block">
+                                  <img src="assets/img/ClusterCarac_IA001.png" alt="ClusterCarac preview"
+                                      class="w-full h-full object-cover">
+                              </a>
+                              <div class="p-5 space-y-3">
+                                  <div class="flex items-start justify-between gap-2">
+                                      <h3 class="text-lg font-bold text-white" data-i18n="proj_cluster_title">
+                          ClusterCarac: Clusters &amp; Classifications</h3>
+                                  </div>
+                                  <p class="text-slate-300 text-sm" data-i18n="proj_cluster_desc">
+                                      R package that surfaces what defines each cluster or category; retro-inspired
+                          characterization preview.
+                                  </p>
+                                  <div class="flex flex-wrap gap-2 text-xs font-mono text-brand-200">
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Social studies</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Market research</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">R</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">FactoClass</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">EDA</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Characterization</span>
+                                  </div>
+                                  <div class="flex gap-3">
+                                      <a href="projects/cluster-carac.html"
                                           class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs
                           hover:bg-gray-200 transition">View
                                           Project</a>
