ajuste de barra fija index

--- a/index.html
+++ b/index.html
@@ -101,10 +101,24 @@
                         &lt;PedroC/<span class="text-brand-500">S&amp;DS</span>&gt;
                     </span>
                 </div>
-                <button id="nav-toggle"
-                    class="md:hidden flex items-center justify-center w-12 h-12 rounded-full bg-brand-600 text-white shadow-xl border border-brand-500/80 hover:bg-brand-500 hover:scale-105 hover:ring-2 hover:ring-white/60 transition focus:outline-none focus:ring-2 focus:ring-white/70">
-                    <i class="fa-solid fa-bars text-2xl drop-shadow"></i>
-                </button>
+                <div class="flex items-center gap-4">
+                    <div class="flex items-center gap-2 bg-slate-800/90 px-2 py-1 rounded-full border border-slate-700 shadow-sm">
+                        <button id="btn-es" class="flex items-center gap-2 md:gap-1 px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
+                            <img src="https://flagcdn.com/w40/es.png" alt="Español" title="Español"
+                                class="w-9 h-9 md:w-6 md:h-6 rounded-full">
+                            <span class="font-semibold md:hidden text-slate-200 text-xs">ES</span>
+                        </button>
+                        <button id="btn-en" class="flex items-center gap-2 md:gap-1 px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
+                            <img src="https://flagcdn.com/w40/gb.png" alt="English" title="English"
+                                class="w-9 h-9 md:w-6 md:h-6 rounded-full">
+                            <span class="font-semibold md:hidden text-slate-200 text-xs">EN</span>
+                        </button>
+                    </div>
+                    <button id="nav-toggle"
+                        class="md:hidden flex items-center justify-center w-12 h-12 rounded-full bg-brand-600 text-white shadow-xl border border-brand-500/80 hover:bg-brand-500 hover:scale-105 hover:ring-2 hover:ring-white/60 transition focus:outline-none focus:ring-2 focus:ring-white/70">
+                        <i class="fa-solid fa-bars text-2xl drop-shadow"></i>
+                    </button>
+                </div>
                 <div id="nav-menu"
                     class="hidden flex-col gap-4 bg-slate-900/95 rounded-2xl p-4 shadow-2xl absolute right-4 top-20 w-48 md:w-auto md:shadow-none md:bg-transparent md:p-0 md:flex md:flex-row md:items-center md:gap-6 md:gap-8 md:static md:rounded-none md:top-auto md:right-auto">
                     <div class="flex flex-col gap-3 md:flex-row md:items-baseline md:space-x-8 md:gap-0">
@@ -123,20 +137,6 @@
                         <a href="#contact"
                             class="bg-brand-600 hover:bg-brand-500 text-white px-4 py-2 rounded-full text-sm font-medium transition-all transform hover:scale-105 shadow-md"
                             data-i18n="nav_contact">Contacto</a>
-                    </div>
-                    <!-- Language Switcher -->
-                    <div
-                        class="flex items-center gap-3 text-sm md:border-l md:border-slate-600 md:pl-6 px-2 py-2 md:p-0 bg-slate-800/90 md:bg-transparent rounded-2xl shadow-lg md:shadow-none">
-                        <button id="btn-es" class="flex items-center gap-2 md:gap-1 px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
-                            <img src="https://flagcdn.com/w40/es.png" alt="Español" title="Español"
-                                class="w-9 h-9 md:w-6 md:h-6 rounded-full">
-                            <span class="font-semibold md:hidden text-slate-200 text-xs">ES</span>
-                        </button>
-                        <button id="btn-en" class="flex items-center gap-2 md:gap-1 px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
-                            <img src="https://flagcdn.com/w40/gb.png" alt="English" title="English"
-                                class="w-9 h-9 md:w-6 md:h-6 rounded-full">
-                            <span class="font-semibold md:hidden text-slate-200 text-xs">EN</span>
-                        </button>
                     </div>
                 </div>
             </div>
