--- a/index.html
+++ b/index.html
@@ -314,6 +314,41 @@
                                   </div>
                               </div>
                           </div>
+
+                          <!-- Project Card 3: FactoClass -->
+                          <div
+                              class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden
+                          hover:-translate-y-2 transition duration-300 flex-shrink-0">
+                              <a href="projects/factoclass.html"
+                                  class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden block">
+                                  <img src="assets/img/FactoClass_template.png" alt="FactoClass preview"
+                                      class="w-full h-full object-cover">
+                              </a>
+                              <div class="p-5 space-y-3">
+                                  <div class="flex items-start justify-between gap-2">
+                                      <h3 class="text-lg font-bold text-white" data-i18n="proj_factoclass_title">
+                          FactoClass: letting data reveal their own structure</h3>
+                                  </div>
+                                  <p class="text-slate-300 text-sm" data-i18n="proj_factoclass_desc">
+                                      Early Statistics work: factorial + clustering pipeline (Ward/K-means) inspired by Lebart,
+                          guided by Campo Elías Pardo.
+                                  </p>
+                                  <div class="flex flex-wrap gap-2 text-xs font-mono text-brand-200">
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Statistics</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">DataScience</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Multivariate Analysis</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Clustering</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">RStats</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Applied Statistics</span>
+                                  </div>
+                                  <div class="flex gap-3">
+                                      <a href="projects/factoclass.html"
+                                          class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs
+                          hover:bg-gray-200 transition">View
+                                          Project</a>
+                                  </div>
+                              </div>
+                          </div>
 </div>
             </div>
         </div>
