--- a/projects/factoclass.html
+++ b/projects/factoclass.html
@@ -139,8 +139,10 @@
             </div>
 
             <div class="rounded-2xl overflow-hidden border border-slate-700 shadow-2xl bg-slate-900">
-                <img src="../assets/img/FactoClass_template.png" alt="FactoClass overview"
+                <img data-lang="en" src="../assets/img/FactoClass_frame_EN.png" alt="FactoClass overview (EN)"
                     class="w-full h-full object-cover max-h-[32rem]">
+                <img data-lang="es" src="../assets/img/FactoClass_frame_ES.png" alt="FactoClass overview (ES)"
+                    class="w-full h-full object-cover max-h-[32rem] hidden">
             </div>
         </div>
 
@@ -148,9 +150,9 @@
             <article data-lang="en"
                 class="glass-panel border border-slate-800 rounded-2xl p-8 shadow-2xl space-y-8">
                 <section class="space-y-3">
-                    <h2 class="text-2xl font-bold text-white">Exploration before prediction</h2>
-                    <p class="text-slate-300">I’ve always believed that before modeling or predicting, we need to explore.
-                        FactoClass comes from that idea.</p>
+                    <h2 class="text-2xl font-bold text-white">Exploration first</h2>
+                    <p class="text-slate-300">I’ve always believed that before classifying, we need to explore. FactoClass
+                        comes from that idea.</p>
                     <p class="text-slate-300">This work is part of what I did while I was a Statistics student at the
                         Universidad Nacional de Colombia. It was my first steps as a statistician and programmer, developed
                         under the guidance of Campo Elías Pardo and inspired by Lebart and colleagues.</p>
@@ -165,24 +167,30 @@
                 </section>
 
                 <section class="space-y-3">
+                    <h3 class="text-xl font-semibold text-white">Applications</h3>
+                    <p class="text-slate-300">FactoClass is useful when the objective is exploratory rather than predictive,
+                        and when understanding internal structure comes before modeling. It fits complex multivariate tables
+                        (quantitative, categorical, or frequency) across <strong>social</strong>, <strong>demographic</strong>,
+                        <strong>territorial</strong>, or <strong>survey-based</strong> datasets. It helps identify meaningful
+                        groups while preserving interpretability, making it applicable to <strong>population profiling</strong>,
+                        <strong>market segmentation</strong>, <strong>behavioral analysis</strong>, <strong>academic research
+                            and teaching</strong> focused on multivariate exploration, and more.</p>
+                </section>
+
+                <section class="space-y-3">
                     <h3 class="text-xl font-semibold text-white">Why it matters</h3>
                     <p class="text-slate-300">Looking back, this work reminds me that deeply understanding and exploring the
                         nature of things is what allows us to classify them in a meaningful way.</p>
                 </section>
 
-                <section class="space-y-3">
-                    <h3 class="text-xl font-semibold text-white">Workflow snapshot</h3>
-                    <img src="../assets/img/FactoClass_frame_EN.png" alt="FactoClass workflow (English)"
-                        class="w-full rounded-xl border border-slate-700">
-                </section>
             </article>
 
             <article data-lang="es"
                 class="glass-panel border border-slate-800 rounded-2xl p-8 shadow-2xl space-y-8 hidden">
                 <section class="space-y-3">
-                    <h2 class="text-2xl font-bold text-white">Explorar antes de predecir</h2>
-                    <p class="text-slate-300">Siempre he creído que antes de modelar o predecir hay que explorar. FactoClass
-                        nace de esa idea.</p>
+                    <h2 class="text-2xl font-bold text-white">Explorar primero</h2>
+                    <p class="text-slate-300">Siempre he creído que antes de clasificar hay que explorar. FactoClass nace
+                        de esa idea.</p>
                     <p class="text-slate-300">Este trabajo hace parte de lo que hice como estudiante de Estadística en la
                         Universidad Nacional de Colombia. Fueron mis primeros pasos como estadístico y programador, bajo la
                         guía de Campo Elías Pardo e inspirado en la metodología de Lebart y sus colegas.</p>
@@ -197,16 +205,23 @@
                 </section>
 
                 <section class="space-y-3">
+                    <h3 class="text-xl font-semibold text-white">Aplicaciones</h3>
+                    <p class="text-slate-300">FactoClass es especialmente útil cuando el objetivo es exploratorio más que
+                        predictivo, y donde comprender la estructura interna de los datos precede al modelado. Funciona bien
+                        con tablas multivariadas complejas—datos cuantitativos, categóricos o de frecuencias—en contextos
+                        <strong>sociales</strong>, <strong>demográficos</strong>, <strong>territoriales</strong> o de
+                        <strong>encuestas</strong>. Ayuda a identificar grupos con sentido sin perder interpretabilidad,
+                        aplicable a <strong>perfiles poblacionales</strong>, <strong>segmentación de mercado</strong>,
+                        <strong>análisis de comportamiento</strong>, <strong>investigación académica y enseñanza</strong> de
+                        métodos exploratorios multivariados, entre otros.</p>
+                </section>
+
+                <section class="space-y-3">
                     <h3 class="text-xl font-semibold text-white">Por qué importa</h3>
                     <p class="text-slate-300">Mirando atrás, este trabajo me recuerda que entender y explorar a fondo la
                         naturaleza de las cosas es lo que permite clasificarlas de manera significativa.</p>
                 </section>
 
-                <section class="space-y-3">
-                    <h3 class="text-xl font-semibold text-white">Flujo de trabajo</h3>
-                    <img src="../assets/img/FactoClass_frame_ES.png" alt="Flujo FactoClass (Español)"
-                        class="w-full rounded-xl border border-slate-700">
-                </section>
             </article>
         </div>
     </main>
