--- a/index.html
+++ b/index.html
@@ -339,13 +339,13 @@
                                       Early Statistics work: factorial + clustering pipeline (Ward/K-means) inspired by Lebart,
                           guided by Campo Elías Pardo.
                                   </p>
-                                  <div class="flex flex-wrap gap-2 text-xs font-mono text-brand-200">
-                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Statistics</span>
-                                      <span class="bg-brand-900/50 px-2 py-1 rounded">DataScience</span>
-                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Multivariate Analysis</span>
-                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Clustering</span>
-                                      <span class="bg-brand-900/50 px-2 py-1 rounded">RStats</span>
-                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Applied Statistics</span>
+                                  <div class="flex flex-wrap gap-2 text-xs font-mono text-emerald-100">
+                                      <span class="bg-emerald-900/60 px-2 py-1 rounded">Statistics</span>
+                                      <span class="bg-emerald-900/60 px-2 py-1 rounded">DataScience</span>
+                                      <span class="bg-emerald-900/60 px-2 py-1 rounded">Multivariate Analysis</span>
+                                      <span class="bg-emerald-900/60 px-2 py-1 rounded">Clustering</span>
+                                      <span class="bg-emerald-900/60 px-2 py-1 rounded">RStats</span>
+                                      <span class="bg-emerald-900/60 px-2 py-1 rounded">Applied Statistics</span>
                                   </div>
                                   <div class="flex gap-3">
                                       <a href="projects/factoclass.html"
