ajuste de tooltip

--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center relative group">
-                    <a href="#hero" title="Pedro C. · Data Science & Stats"
+                    <span title="Pedro C. · Data Science & Stats"
                         class="text-xl font-bold font-mono tracking-tighter hover:text-brand-300 transition-colors">
                         &lt;PedroC/<span class="text-brand-500">S&amp;DS</span>&gt;
-                    </a>
+                    </span>
                     <div
-                        class="pointer-events-none absolute left-1/2 -translate-x-1/2 top-full mt-3 w-20 bg-slate-900/90 border border-slate-700 shadow-xl rounded-xl p-2 opacity-0 group-hover:opacity-100 transition-opacity duration-200">
+                        class="pointer-events-none absolute left-1/2 -translate-x-1/2 top-full mt-3 w-14 sm:w-20 bg-slate-900/90 border border-slate-700 shadow-xl rounded-xl p-2 opacity-0 group-hover:opacity-100 transition-opacity duration-200">
                         <img src="assets/img/PCDCN8bits.png" alt="PedroC retro avatar"
                             class="w-full h-auto rounded-lg">
                     </div>
