--- a/project_template.html
+++ b/project_template.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle de Proyecto - Portfolio</title>
+    <link rel="icon" type="image/png" href="assets/img/PCDCN8bits.png?v=2">
+    <link rel="shortcut icon" href="assets/img/PCDCN8bits.png?v=2">
 
     <!-- Design Resources -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -55,7 +57,7 @@
     <!-- Compact Navigation -->
     <nav class="fixed top-0 left-0 right-0 w-full z-50 glass-panel h-16 flex items-center bg-slate-900/95 backdrop-blur-md border-b border-slate-800">
         <div class="max-w-7xl mx-auto px-4 w-full flex justify-between">
-            <a href="index.html" class="flex items-center gap-2 text-slate-300 hover:text-white transition-colors">
+            <a href="index.html#projects" class="flex items-center gap-2 text-slate-300 hover:text-white transition-colors">
                 <i class="fa-solid fa-arrow-left"></i>
                 <span class="font-bold font-mono">Volver al Portafolio</span>
             </a>
