--- a/projects/cluster-carac.html
+++ b/projects/cluster-carac.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>ClusterCarac | Portfolio</title>
+    <link rel="icon" type="image/png" href="../assets/img/PCDCN8bits.png?v=2">
+    <link rel="shortcut icon" href="../assets/img/PCDCN8bits.png?v=2">
 
     <!-- Design Resources -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -61,7 +63,7 @@
     <nav
         class="fixed top-0 left-0 right-0 w-full z-50 glass-panel h-16 flex items-center bg-slate-900/95 backdrop-blur-md border-b border-slate-800">
         <div class="max-w-7xl mx-auto px-4 w-full flex items-center justify-between">
-            <a href="../index.html"
+            <a href="../index.html#projects"
                 class="flex items-center gap-2 text-slate-300 hover:text-white transition-colors text-sm font-semibold"
                 data-i18n="project_back">
                 <i class="fa-solid fa-arrow-left"></i>
@@ -130,7 +132,7 @@
                         class="inline-flex items-center gap-2 px-4 py-2 rounded-full border border-slate-600 text-slate-200 hover:border-brand-500 hover:text-brand-400 transition-colors">
                         <i class="fa-brands fa-github"></i> <span data-i18n="project_repo_btn">View on GitHub</span>
                     </a>
-                    <a href="../index.html"
+                    <a href="../index.html#projects"
                         class="inline-flex items-center gap-2 px-4 py-2 rounded-full border border-slate-600 text-slate-200 hover:border-slate-400 transition-colors">
                         <i class="fa-solid fa-arrow-left"></i> <span data-i18n="project_back">Back to portfolio</span>
                     </a>
