brra fija index

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 
 <body class="antialiased selection:bg-brand-500 selection:text-white">
     <!-- Navigation -->
-<nav class="fixed top-0 left-0 right-0 w-full z-50 glass-panel border-b border-slate-800 bg-slate-900/95 backdrop-blur-md relative">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex items-center justify-between h-16">
+<nav class="fixed top-0 left-0 right-0 w-full z-50 glass-panel h-16 flex items-center bg-slate-900/95 backdrop-blur-md border-b border-slate-800">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 w-full">
+            <div class="flex items-center justify-between w-full">
                 <div class="flex items-center relative group">
                     <span title="Pedro C. · Data Science & Stats"
                         class="text-xl font-bold font-mono tracking-tighter hover:text-brand-300 transition-colors">
