cambiio de tamaño

--- a/index.html
+++ b/index.html
@@ -130,15 +130,13 @@
                     </div>
                     <div
                         class="flex items-center gap-2 text-sm bg-slate-800/90 px-2 py-1 rounded-full border border-slate-700 shadow-sm">
-                        <button id="btn-es" class="flex items-center gap-2 md:gap-1 px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
+                        <button id="btn-es" class="flex items-center px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
                             <img src="https://flagcdn.com/w40/es.png" alt="Español" title="Español"
-                                class="w-9 h-9 md:w-6 md:h-6 rounded-full">
-                            <span class="font-semibold md:hidden text-slate-200 text-xs">ES</span>
+                                class="w-8 h-8 sm:w-6 sm:h-6 rounded-full">
                         </button>
-                        <button id="btn-en" class="flex items-center gap-2 md:gap-1 px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
+                        <button id="btn-en" class="flex items-center px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
                             <img src="https://flagcdn.com/w40/gb.png" alt="English" title="English"
-                                class="w-9 h-9 md:w-6 md:h-6 rounded-full">
-                            <span class="font-semibold md:hidden text-slate-200 text-xs">EN</span>
+                                class="w-8 h-8 sm:w-6 sm:h-6 rounded-full">
                         </button>
                     </div>
                     <button id="nav-toggle"
