--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
                         class="flex items-center gap-2 text-sm bg-slate-800/90 px-2 py-1 rounded-full border border-slate-700 shadow-sm">
                         <button id="btn-es" class="flex items-center px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
                             <img src="https://flagcdn.com/w40/es.png" alt="Español" title="Español"
-                                class="w-8 h-8 sm:w-6 sm:h-6 rounded-full">
+                                class="w-6 h-6 rounded-full">
                         </button>
                         <button id="btn-en" class="flex items-center px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
                             <img src="https://flagcdn.com/w40/gb.png" alt="English" title="English"
-                                class="w-8 h-8 sm:w-6 sm:h-6 rounded-full">
+                                class="w-6 h-6 rounded-full">
                         </button>
                     </div>
                     <button id="nav-toggle"
